<resources>
    <string name="app_name">InstaClone</string>


    <string name="Instagram_Title">Instagram</string>
    <string name="email_address">Email Address</string>
    <string name="password">password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="signin">SignIn</string>
    <string name="login">Login</string>
    <string name="user_name">User Name</string>

    <!-- placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_search">SearchActivity</string>

    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="search">Search</string>
    <string name="following">Following</string>
    <string name="followers">Followers</string>
    <string name="posts">Posts</string>
    <string name="edit_bio_data">Edit Bio Data</string>
    <string name="post">Post</string>
    <string name="file_provider" translatable="false">com.android.example.instaclone.fileprovider</string>

    <string name="pick_single">Please select your image</string>
    <string name="follow">Follow</string>
    <string name="message">Message</string>
    <string name="save">Save</string>
    <string name="title_activity_comment_acticity">CommentActicity</string>
    <string name="comments">Comments</string>
    <string name="add_a_comment">Add a comment...</string>


    <!-- FireBase Database Field -->
    <string name="db_user">User</string>
    <string name="db_post">Posts</string>
    <string name="db_likes">Likes</string>
    <string name="db_follow">Follow</string>
    <string name="db_comment">Comment</string>

    <string name="field_user_username">userName</string>
    <string name="field_user_bio">bio</string>
    <string name="field_user_emailID">emailId</string>
    <string name="field_user_id">id</string>
    <string name="field_user_profile_image_URL">profileimg</string>

    <string name="field_post_description">description</string>
    <string name="field_post_Id">postId</string>
    <string name="field__post_imageURL">imageUrl</string>
    <string name="field_post_publisher">publisher</string>
    <string name="field_post_time">time</string>

    <string name="field_follow_followers">Followers</string>
    <string name="field_follow_following">Following</string>

    <string name="field_comment_commentdata">commentdata</string>
    <string name="field_comment_id">id</string>
    <string name="field_comment_publisher">publisher</string>
    <string name="field_comment_time">time</string>
    <string name="delete_post">Delete Post</string>
    <string name="share_post">Share Post</string>
    <string name="logout">Logout</string>
    <string name="delete_account">Delete Account</string>
    //Google Signin

    <string name="web_client_id">812562114581-pfnubf3t3lta0plr4nj21kcl9abfgq52.apps.googleusercontent.com</string>

</resources>