<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <TextView
            android:layout_width="350dp"
            android:layout_height="100dp"
            style="@style/logintitle"
            android:text="@string/Instagram_Title"
            android:textAlignment="center"
            android:textSize="60sp"
            android:textColor="@color/Title" />


        <EditText
            android:id="@+id/Input_Email_ID"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="@string/email_address"
            android:lines="1"
            style="@style/input"
            android:background="#fafafa"
            />

        <EditText
            android:id="@+id/Input_Password"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:inputType="textPassword"
            style="@style/input"
            android:hint="@string/password"
            android:background="#fafafa"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/Login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="50dp"
                style="@style/input"
                android:text="@string/login" />

            <Button
                android:id="@+id/SignIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signin"
                style="@style/input"/>

        </LinearLayout>
        <TextView
            android:id="@+id/forgot_PassWord"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:gravity="center"
            android:textColor="@color/blue"
            style="@style/input"
            android:textSize="15sp"/>
    </LinearLayout>

</RelativeLayout>