<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.FragmentLogin">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="100dp"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <TextView
            style="@style/logintitle"
            android:layout_width="350dp"
            android:layout_height="100dp"
            android:text="@string/Instagram_Title"
            android:textAlignment="center"
            android:textColor="@color/Title"
            android:textSize="60sp" />


        <EditText
            android:id="@+id/Input_Email_ID"
            style="@style/input"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="#fafafa"
            android:hint="@string/email_address"
            android:inputType="textEmailAddress"
            android:lines="1" />

        <EditText
            android:id="@+id/Input_Password"
            style="@style/input"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="#fafafa"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/Login"
                style="@style/input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="50dp"
                android:text="@string/login" />


        </LinearLayout>

        <TextView
            android:id="@+id/forgot_PassWord"
            style="@style/input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/forgot_password"
            android:textColor="@color/blue"
            android:textSize="15sp" />
    </LinearLayout>

</FrameLayout>