<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <TextView
            style="@style/logintitle"
            android:layout_width="350dp"
            android:layout_height="100dp"
            android:text="@string/Instagram_Title"
            android:textAlignment="center"
            android:textColor="@color/Title"
            android:textSize="60sp" />

        <EditText
            android:id="@+id/Input_Email_ID"
            style="@style/input"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="#fafafa"

            android:inputType="textEmailAddress"
            android:hint="@string/email_address" />

        <EditText
            android:id="@+id/Input_User_Name"
            style="@style/input"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="#fafafa"
            android:inputType="textPersonName"
            android:hint="@string/user_name" />

        <EditText
            android:id="@+id/Input_Password"
            style="@style/input"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="#fafafa"

            android:hint="@string/password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/SignIn"
            style="@style/input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signin" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/sign_in_google"
            style="@style/input"
            android:text="SignInByGoogle"/>
    </LinearLayout>
</RelativeLayout>