<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="#e3f2fd">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <TextView
            android:layout_width="350dp"
            android:layout_height="100dp"
            style="@style/logintitle"
            android:text="@string/Instagram_Title"
            android:textAlignment="center"
            android:textSize="60sp"
            android:textColor="@color/Title" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_marginTop="45dp">

            <Button
                android:id="@+id/Login_main"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="50dp"
                style="@style/input"
                android:text="@string/login" />

            <Button
                android:id="@+id/SignIn_main"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signin"
                style="@style/input"/>

        </LinearLayout>


    </LinearLayout>

</RelativeLayout>