<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ListDisplay.CommentActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@drawable/rectangle_black_border"
        android:backgroundTint="#e3f2fd">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/close_button"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginEnd="10dp"
                android:src="@drawable/ic_baseline_arrow_back_24" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:text="@string/comments"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>
    </androidx.appcompat.widget.Toolbar>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/comment_Con"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolBar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center_vertical"
        android:padding="5dp">

        <ImageView
            android:id="@+id/user_profile_photo"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginEnd="10dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_action_person" />

        <androidx.appcompat.widget.AppCompatAutoCompleteTextView
            android:id="@+id/post_comment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/add_a_comment"
            android:inputType="textMultiLine"
            android:maxLines="5"
            android:padding="2dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/comment_post_button"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:background="@color/blue"
            android:gravity="center_vertical"
            android:padding="5dp"
            android:text="@string/post"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold" />
    </LinearLayout>

</RelativeLayout>