<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/profile_top"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:paddingVertical="19dp"
            android:paddingHorizontal="5dp">

            <ImageView
                android:id="@+id/user_profile_photo"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerVertical="true"
                android:scaleType="centerCrop"
                android:layout_marginEnd="10dp"
                android:src="@drawable/ic_action_person" />


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_toRightOf="@id/user_profile_photo"
                android:padding="10dp">

                <TextView
                    android:id="@+id/count_post"
                    android:layout_width="60dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="30dp"
                    android:text="0"
                    android:textAlignment="center"
                    android:textSize="25sp" />

                <TextView
                    android:id="@+id/count_followers"
                    android:layout_width="60dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="30dp"
                    android:text="0"
                    android:textAlignment="center"
                    android:textSize="25sp" />

                <TextView
                    android:id="@+id/count_following"
                    android:layout_width="60dp"
                    android:layout_height="match_parent"
                    android:text="0"
                    android:textSize="25sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_alignParentBottom="true"
                android:layout_toEndOf="@id/user_profile_photo"
                android:paddingStart="10dp">

                <TextView
                    android:id="@+id/count_post1"
                    android:layout_width="60dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="25dp"
                    android:padding="10dp"
                    android:text="@string/posts"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/count_followers1"
                    android:layout_width="70dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="20dp"
                    android:paddingHorizontal="4dp"
                    android:paddingTop="10dp"
                    android:text="@string/followers"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/count_following1"
                    android:layout_width="70dp"
                    android:layout_height="match_parent"
                    android:paddingHorizontal="4dp"
                    android:paddingTop="10dp"
                    android:text="@string/following"
                    android:textAlignment="center" />
            </LinearLayout>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginBottom="20dp">

            <TextView
                android:id="@+id/user_bio_data"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:layout_above="@id/profile_edit_bio_data"
                android:padding="20dp"
                android:text="Bio Data"/>

            <TextView
                android:id="@+id/profile_edit_bio_data"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_alignParentBottom="true"
                android:text="@string/edit_bio_data"
                android:textAlignment="center"
                android:textStyle="bold" />

        </RelativeLayout>

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/profile_post"
            android:gravity="center"
            android:horizontalSpacing="1dp"
            android:numColumns="3"
            android:stretchMode="columnWidth"
            android:verticalSpacing="1dp"/>

    </LinearLayout>

</RelativeLayout>