<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Profile.SearchProfileFragment"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout

        android:id="@+id/profile_toolbar_above"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/rectangle_black_border"
        android:backgroundTint="#e3f2fd"

        >

        <androidx.appcompat.widget.Toolbar

            android:id="@+id/toolBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="15dp"
                    android:text="User Name"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <ImageView
                    android:id="@+id/profileMenu"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="20dp"
                    android:src="@drawable/ic_baseline_more_vert_24" />

            </RelativeLayout>


        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/profile_top"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:paddingHorizontal="5dp"
                android:paddingVertical="19dp">

                <ImageView
                    android:id="@+id/user_profile_photo"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="10dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_action_person" />


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="70dp"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="10dp">

                    <TextView
                        android:id="@+id/count_post"
                        android:layout_width="60dp"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="30dp"
                        android:text="0"
                        android:textAlignment="center"
                        android:textSize="25sp" />

                    <TextView
                        android:id="@+id/count_followers"
                        android:layout_width="60dp"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="30dp"
                        android:text="0"
                        android:textAlignment="center"
                        android:textSize="25sp" />

                    <TextView
                        android:id="@+id/count_following"
                        android:layout_width="60dp"
                        android:layout_height="match_parent"
                        android:text="0"
                        android:textSize="25sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="5dp">

                    <TextView
                        android:id="@+id/count_post1"
                        android:layout_width="60dp"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="25dp"
                        android:padding="10dp"
                        android:text="@string/posts"
                        android:textAlignment="center" />

                    <TextView
                        android:id="@+id/count_followers1"
                        android:layout_width="70dp"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="20dp"
                        android:paddingHorizontal="4dp"
                        android:paddingTop="10dp"
                        android:text="@string/followers"
                        android:textAlignment="center" />

                    <TextView
                        android:id="@+id/count_following1"
                        android:layout_width="70dp"
                        android:layout_height="match_parent"
                        android:paddingHorizontal="4dp"
                        android:paddingTop="10dp"
                        android:text="@string/following"
                        android:textAlignment="center" />
                </LinearLayout>

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:minHeight="70dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/user_bio_data"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_marginBottom="10dp"
                    android:paddingHorizontal="20dp"
                    android:paddingVertical="10dp"
                    android:text="Bio Data" />

                <LinearLayout
                    android:id="@+id/profile_search_button_con"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/profile_search_follow_button"
                        android:layout_width="match_parent"
                        android:layout_height="25dp"
                        android:layout_weight="1"
                        android:text="@string/follow"
                        android:textAlignment="center"
                        android:textColor="@color/blue"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/profile_search_message_buttom"
                        android:layout_width="match_parent"
                        android:layout_height="25dp"
                        android:layout_weight="1"
                        android:text="@string/message"
                        android:textAlignment="center"
                        android:textStyle="bold" />

                    <ImageView
                        android:layout_width="26dp"
                        android:layout_height="26dp"
                        android:layout_marginEnd="10dp"
                        android:scaleType="fitCenter"
                        android:src="@drawable/ic_baseline_arrow_drop_down_24" />
                </LinearLayout>


            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/profile_post"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>
